src/styles/SyncFusion.css
/*white checkbox, page number */

.e-pager .e-currentitem {
  color: white !important;
}

.e-checkbox-wrapper .e-frame {
  color: white !important;
}

/* badge */
.e-badge {
  color: #fff !important;
  line-height: 0 !important;
  padding: 10px !important;
}

.e-badge.size {
  font-size: 100%;
  padding: 10px 0 !important;
}

@media (min-width: 2000px) {
  padding: 20px !important;
}

/* dark theme */
@media (prefers-color-scheme: dark) {
  text[id^='charts_datalabel'],
  text[id^='PivotView_chart'] {
    fill: #d3d3d3 !important;
  }

  .e-dropdownbase .e-list-item.e-item-focus,
  .e-dropdownbase .e-list-item.e-active,
  .e-dropdownbase .e-list-item.e-active.e-hover,
  .e-dropdownbase .e-list-item.e-hover {
    background-color: rgb(2, 138, 199) !important;
  }

  .e-dropdownbase {
    & [aria-expanded='true'] {
      background: rgb(28, 27, 31) !important;
      color: white !important;
    }
  }

  .e-excel-menu,
  .e-xlflmenu,
  .e-dlg-content,
  .e-date-range-container,
  .e-footer,
  .e-daterangepicker.e-popup .e-range-header,
  .e-dropdownbase .e-list-item,
  .e-dropdownbase .e-list-item.e-item-focus,
  .e-calendar,
  .e-menu-parent .e-ul,
  .e-contextmenu-wrapper ul.e-contextmenu,
  .e-datetimepicker.e-popup {
    background: rgb(28, 27, 31) !important;
    color: white !important;
  }

  .e-daterangepicker.e-popup .e-calendar .e-header .e-title,
  .e-bigger .e-daterangepicker .e-footer .e-btn,
  .e-bigger .e-daterangepicker .e-footer .e-btn.e-apply,
  .e-daterangepicker.e-popup .e-range-header .e-change-icon,
  .e-calendar .e-header .e-title,
  .e-bigger.e-small .e-calendar .e-header .e-title,
  .e-calendar .e-content span.e-day,
  .e-calendar .e-content span.e-day,
  .e-bigger.e-small .e-calendar .e-content span.e-day,
  span.e-input-group.e-control-wrapper.e-ddl.e-lib.e-keyboard.e-valid-input,
  span.e-label,
  .e-xlfl-optr,
  .e-dlg-header,
  .e-bigger.e-small .e-calendar .e-content span.e-day,
  .e-daterangepicker.e-popup .e-range-header .e-day-span,
  .e-daterangepicker.e-popup .e-range-header .e-start-label,
  .e-daterangepicker.e-popup .e-range-header .e-end-label,
  .e-bigger.e-small .e-daterangepicker.e-popup .e-range-header .e-start-label,
  .e-bigger.e-small .e-daterangepicker.e-popup .e-range-header .e-end-label {
    color: white !important;
  }

  .e-calendar .e-content td:hover span.e-day,
  .e-calendar .e-content td:focus span.e-day,
  .e-bigger.e-small .e-calendar .e-content td:hover span.e-day,
  .e-bigger.e-small .e-calendar .e-content td:focus span.e-day {
    background-color: rgb(2, 132, 199);
    border: 2px solid;
    color: white;
  }

  .e-checkbox-wrapper .e-frame {
    border-color: rgb(2, 132, 199) !important;
  }

  .e-contextmenu-wrapper ul.e-contextmenu {
    border-color: rgb(28, 27, 31) !important;
  }
  .e-contextmenu-wrapper ul,
  .e-contextmenu-container ul {
    background: rgb(28, 27, 31) !important;
    border-color: rgb(28, 27, 31) !important;
  }

  .e-pivotfieldlist-container .e-layout-footer .e-cancel-btn,
  .e-contextmenu-wrapper ul .e-menu-item .e-caret::before,
  .e-contextmenu-wrapper ul .e-menu-item.e-selected,
  .e-contextmenu-wrapper ul.e-ul {
    color: white !important;
  }

  .e-contextmenu-wrapper ul .e-menu-item.e-disabled {
    color: #897d7d !important;
  }

  .e-radio + label:hover::before,
  .e-checkbox-wrapper:hover .e-frame {
    border-color: white !important;
    color: white !important;
  }

  .e-list-item {
    background-color: rgb(28, 27, 31) !important;
    color: white !important;
  }

  .e-contextmenu-wrapper ul .e-menu-item.e-focused,
  .e-contextmenu-container ul .e-menu-item.e-focused {
    color: white !important;
    background-color: rgb(2, 132, 199) !important;
  }

  .e-list-item.e-item-focus,
  .e-list-item.e-active,
  .e-list-item.e-active.e-hover,
  .e-daterangepicker.e-popup .e-calendar .e-content .e-range-hover,
  .e-list-item.e-hover {
    background-color: rgb(2, 138, 199) !important;
  }
}

